# Document-summarizer

./: .gitignore  Readme.md  document-summarizer.py  main.py  pyproject.toml  requirements.txt
modules/: chat.py  prompts.py  provider_config.py  summarizer.py  text_extraction.py  ui_components.py  web_content_loader.py
notebooks/: HuggingFaceEndpoint_inference.ipynb  hf_inference_api.ipynb  langchain_ollama.ipynb  streaming.ipynb  test_hf_inference_api.ipynb  test_summarizer.ipynb
test_documents/: sample_text.txt
