[project]
name = "document-summarizer"
version = "0.1.0"
description = "A Python package for summarizing documents using LLMs"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "frozenlist==1.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain[mistralai]==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.54",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.32",
    "lxml==5.3.2",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "multidict==6.4.3",
    "mypy-extensions==1.0.0",
    "narwhals==1.35.0",
    "numpy<2.0",
    "openai==1.75.0",
    "openpyxl==3.1.5",
    "orjson==3.10.16",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "pyarrow==19.0.1",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pydeck==0.9.1",
    "pypdf2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.24.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.40",
    "streamlit==1.44.1",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
    "ipykernel==6.29.5",
    "torch==2.2.2",
    "langchain-ollama==0.3.2",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "huggingface-hub==0.30.2",
    "ipython==9.1.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "langchain-mistralai==0.2.10",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ollama==0.4.8",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyzmq==26.4.0",
    "safetensors==0.5.3",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tokenizers==0.21.1",
    "traitlets==5.14.3",
    "wcwidth==0.2.13",
    "langchain-huggingface>=0.1.2",
    "ipywidgets>=8.1.6",
]
